# GeoRacoon

./: .gitattributes  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  data.json  landiv_env_setup.sh  landiv_kernel.sh  load_part.py  pyproject.toml  requirements.txt
.github/workflows/: crossPRcoverage.yml  deploy.yml  develop.yml  docs_deploy.yml  draft-pdf.yml  status.yml
data/testing/ndvi/: Switzerland_NDVI_binning_2015.tif
docs/: conf.py  index.md  requirements.txt
docs/JOSS/: paper.bib  paper.md
docs/_static/: custom-pst.css  custom.css
docs/content/convster/: index.md
docs/content/coonfit/: index.md
docs/content/georacoon/: index.md  installation.md  overview.md  usage.md
docs/content/linfit/: index.md
docs/content/riogrande/: index.md
examples/: README.md  README.rst  basic_usecases.py  betas_32U.py  clip_and_maks_SILA.py  clipping_and_masking.py  console_launcher.sh  entropy_after_blur.py  exmpl_01_lst_topogradient.py  from_lct_map_to_betas_in_parallel.py  landcover_abundance.py  locals.py.example  plot_01_lst_topogradient.py  present_utm.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_3efb9f42a77d0c80_core_py.html  z_3efb9f42a77d0c80_exceptions_py.html  z_3efb9f42a77d0c80_models_py.html  z_5ffc4a6dc7e58bd5_processing_py.html  z_687419ee552ba35b_gaussian_py.html  z_90246871bb9db489_helper_py.html  z_90246871bb9db489_parallel_py.html  z_90246871bb9db489_prepare_py.html  z_90246871bb9db489_timing_py.html  z_bd14e8441e83a855_exceptions_py.html  z_bd14e8441e83a855_inference_py.html  z_bd14e8441e83a855_parallel_helpers_py.html
src/convster/: __init__.py  array_processing.py  helper.py  io.py  parallel.py  plotting.py  prepare.py  processing.py
src/convster/filters/: __init__.py  gaussian.py
src/coonfit/: __init__.py  exceptions.py  helper.py  inference.py  parallel.py  parallel_helpers.py
src/landiv_blur/: __init__.py  _exceptions.py  _prepare.py  array_processing.py  exceptions.py  exec.py  helper.py  inference.py  io.py  io_.py  loading.py  parallel.py  plotting.py  prepare.py  processing.py  select.py  timing.py
src/landiv_blur/filters/: __init__.py  gaussian.py
src/landiv_blur/scripts/: console_launcher.sh  entrypoint_deprecated.py  parallel_filter.py
src/linfit/: __init__.py  exceptions.py  helper.py  inference.py  parallel.py  parallel_helpers.py
src/riogrande/: README.md  __init__.py  exceptions.py  helper.py  io.py  io_.py  parallel.py  prepare.py  select.py  timing.py
src/riogrande/io/: __init__.py  core.py  exceptions.py  models.py
tests/: config.py  conftest.py  requirements.txt  test_Band_and_Source.py  test_filters.py  test_gaussian.py  test_helper.py  test_helper_mpc.py  test_inference.py  test_io.py  test_loading.py  test_parallel.py  test_prepare.py  test_processing.py
tests/test_convster/: conftest.py  test_convster_init.py  test_filters.py  test_gaussian.py  test_helper.py  test_parallel_convster.py  test_prepare.py  test_processing.py
tests/test_coonfit/: conftest.py  test_coonfit_init.py  test_helper.py  test_inference.py  test_linfit_init.py  test_parallel_coonfit.py  test_parallel_helpers.py  test_parallel_linfit.py
tests/test_linfit/: conftest.py  test_helper.py  test_inference.py  test_parallel_linfit.py
tests/test_riogrande/: conftest.py  test_Band_and_Source.py  test_helper.py  test_io.py  test_parallel_riogrande.py  test_prepare.py  test_riogrande_init.py
