[project]
name = "landiv_blur"
authors = [
  { name="Jonas I. Liechti", email="j-i-l@t4d.ch" },
]
dynamic = ["version"]
description = "Package to compute diversity measures in land cover type (LCT) maps"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "rasterio",
    "scikit-image",
    "matplotlib"
]

[project.urls]
Homepage = "https://git.math.uzh.ch/landiv/landiv/"
Issues = "https://git.math.uzh.ch/landiv/landiv/-/issues"

[project.scripts]
landiv = "landiv_blur.scripts.parallel_filter:main"
# landiv_old = "landiv_blur.scripts.entropoint_deprecated:main_cli"

[tool.setuptools_scm]

[build-system]
requires = ["setuptools>=64.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"
