[project]
name = "landiv_blur"
authors = [
  { name="Simon Landauer", email="simon.landauer@gmail.com" },
  { name="Jonas I. Liechti", email="j-i-l@t4d.ch" },
]
dynamic = ["version", "dependencies", "optional-dependencies"]
description = "Package to compute diversity measures in land cover type (LCT) maps"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic.dependencies]
file = ["requirements.txt"]

[tool.setuptools.dynamic.optional-dependencies.testing]
file = ["tests/requirements.txt"]

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "landiv_blur",
  "convster",
  "convster.filters"
  "riogrande",
  "linfit",
]
exclude = ["tests*"]

[project.urls]
Homepage = "https://git.math.uzh.ch/landiv/landiv/"
Issues = "https://git.math.uzh.ch/landiv/landiv/-/issues"

# [project.scripts]
# landiv = "landiv_blur.scripts.parallel_filter:main"
# landiv_old = "landiv_blur.scripts.entropoint_deprecated:main_cli"

[tool.setuptools]
include-package-data = false

[tool.setuptools_scm]

[build-system]
requires = ["setuptools>=64.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

# config for the test coverage
[tool.coverage.run]
relative_files = true
source = [
    "src/riogrande",
    "src/convster",
    "src/convster/filters",
    "src/linfit"
]
omit = [
  "tests",
  "*__init__.py",
  ]
[tool.coverage.paths]
source = [
  "src/riogrande/", 
  "src/riogrande/io", 
  "src/convster/",
  "src/convster/filters",
  "src/linfit/", 
]
