[project]
name = "GeoRacoon"
authors = [
  { name="Simon Landauer", email="simon.landauer@gmail.com" },
  { name="Jonas I. Liechti", email="j-i-l@t4d.ch" },
]
dynamic = ["version", "dependencies", "optional-dependencies"]
description = "Package to compute diversity measures in land cover type (LCT) maps"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic.dependencies]
file = ["requirements.txt"]

[tool.setuptools.dynamic.optional-dependencies.testing]
file = ["tests/requirements.txt"]

[tool.setuptools.dynamic.optional-dependencies.docs]
file = ["docs/requirements.txt"]

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "riogrande",
  "riogrande.io",
  "convster",
  "convster.filters",
  "linfit",
]
exclude = ["tests*"]

[project.urls]
Homepage = "https://github.com/GeoRacoon/georacoon/"
Issues = "https://github.com/GeoRacoon/georacoon/issues"

# [project.scripts]
# TODO: we might want to expose some functions of riogrande.io?
# <executable> = "<path/to/py-file>:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools_scm]

[build-system]
requires = ["setuptools>=64.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

# config for the test coverage
[tool.coverage.run]
relative_files = true
source = [
    "src/riogrande",
    "src/riogrande/io",
    "src/convster",
    "src/convster/filters",
    "src/linfit",
]
omit = [
  "tests",
  "*__init__.py",
  ]
[tool.coverage.paths]
source = [
  "src/riogrande/", 
  "src/riogrande/io", 
  "src/convster/",
  "src/convster/filters",
  "src/linfit/", 
]
